Assume the 1st USB device configuration has been selected on Android.

Linux will almost always select the first configuration and this avoids
apps issuing a SetConfiguration request which may fail if the system
thinks the device is busy.

A better option is to look into whether I can read the currently
selected configuration out of sysfs on Android but that is a much larger
patch so this is a good stop-gap measure.

BUG=692861

Review-Url: https://codereview.chromium.org/2700713002
Cr-Commit-Position: refs/heads/master@{#451054}

Former-commit-id: 3ab86ccb569cff38b362457b7a12762dc9cbab82